# Circuit-Board-AI

./: .gitignore  README.md  pyproject.toml  setup.py  user_interface.html
deploy/jetson/: install_app.sh  install_axis_bridge_service.sh  launch_kiosk.sh  run_update.sh  update_app.sh
src/pcb_inspector/: __init__.py  axis_bridge.py  gemini_inspection.py  grbl_axis.py  laser_engraver.py  main.py
