[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pcb-inline-inspector"
version = "0.1.0"
description = "Inline PCB inspection workflow for conveyor-based AOI."
requires-python = ">=3.6"
dependencies = [
    "Flask",
    "pyserial",
]

[project.optional-dependencies]
build = ["pyinstaller"]

[project.scripts]
pcb-inspector = "pcb_inspector.main:main"

[tool.setuptools.packages.find]
where = ["src"]
